2001-03-20  Dave Peticolas  <dave@krondo.com>

	* src/scm/report/income-expense-graph.scm: work on display

	* src/scm/html-utilities.scm (gnc:account-anchor-text): new func

	* src/gnome/gnc-html.c: check for null args

	* src/scm/report/income-or-expense-pie.scm: work on display

	* src/scm/html-utilities.scm: add function for assigning colors

2001-03-19  Dave Peticolas  <dave@krondo.com>

	* src/gnome/gnc-html-guppi.c: fix callback pointer

	* src/engine/Transaction.c (xaccSplitGetCorrAccountName): i18n
	(xaccSplitGetCorrAccountCode): i18n

	* src/guile/gnucash.c.in (gnucash_lowlev_app_init): update
	last stable version

	* src/scm/report.scm: more work on display

	* src/scm/report/register.scm: add api for printing a
	register report. more work on display

	* src/gnome/window-report.c (gnc_print_report): add api
	for printing reports

	* src/gnome/gnc-html.c: check for no urltype callback

	* src/scm/report/stylesheet-plain.scm: add some more space
	between table cells

	* src/gnome/window-register.c: add support for printing reports

	* src/guile/gnc.gwp: add print report api

	* src/gnome/gnc-html.c: use PWARN, not printf

	* rpm/gnucash.spec.in: add finance-quote-helper as executable

2001-03-19  Derek Atkins  <warlord@MIT.EDU>

	* src/engine/rpc/*: Gnucash RPC Subsystem (Backend and Server).
	  Still considered experimental.  Note that the RPC protocol may
	  change over time causing client/server incompatibilities between
	  various versions of client and server.

	* configure.in: Add option to --enable-rpc.  Hook in RPC Subsystem
	
	* src/engine/Account.c: Fix for initial balance on
	  stock/etc. accounts.  In particular, don't set to zero if there
	  are no splits.

	* src/engine/Backend.h: New RPC errors
	
	* src/engine/Query.{c,h}: Add function to obtain the internal
	  Query Predicate functions (for use in rebuilding Queries from
	  the RPC subsystem)
	
	* src/engine/Transaction.c: Be sure to call the backend in
	  xaccTransRollbackEdit()
